--- a/secrets/secrets.yaml.example
+++ b/secrets/secrets.yaml.example
@@ -3,25 +3,18 @@
 # 2. Fill in your values
 # 3. Run ./encrypt
 
-user:
-    # Generate with: mkpasswd -m SHA-512
-    hashedPassword: "$6$..."
-    # Your SSH public key (cat ~/.ssh/id_ed25519.pub)
-    pubKey: "ssh-ed25519 AAAA..."
+# Generate with: mkpasswd -m SHA-512
+user_hashedPassword: "$6$..."
 
-vpn:
-    # WireGuard config from VPN provider (Mullvad, AirVPN, etc.)
-    wgConf: |
-        [Interface]
-        PrivateKey = ...
-        Address = ...
-        [Peer]
-        PublicKey = ...
-        Endpoint = ...
-        AllowedIPs = 0.0.0.0/0
+# WireGuard config from VPN provider (Mullvad, AirVPN, etc.)
+vpn_wgConf: |
+    [Interface]
+    PrivateKey = ...
+    Address = ...
+    [Peer]
+    PublicKey = ...
+    Endpoint = ...
+    AllowedIPs = 0.0.0.0/0
 
-services:
-    transmission:
-        credentials: '{"rpc-password": "your_password"}'
-    caddy:
-        cloudflareToken: "CLOUDFLARE_API_TOKEN=your_token_here"
+services_transmission_credentials: '{"rpc-password": "your_password"}'
+services_caddy_cloudflareToken: "CLOUDFLARE_API_TOKEN=your_token_here"
