--- a/secrets/secrets.yaml.example
+++ b/secrets/secrets.yaml.example
@@ -12,7 +12,23 @@ tailscale_authKey: "tskey-auth-..."
 # WiFi PSK (only needed if enableWifi = true in settings.nix)
 # wifi_psk: "your_wifi_password"
 
-# Service-specific secrets are declared in their respective service modules:
-# - vpn_wgConf: services/arr-suite.nix + transmission.nix
-# - services_transmission_credentials: services/transmission.nix
-# - services_caddy_cloudflareToken: services/caddy.nix
+# OpenClaw gateway token
+openclaw_gateway_token: "tok_..."
+openclaw_gateway_password: "your_gateway_password"
+
+# Composio self-hosted secrets
+composio_encryption_key: "your_encryption_key"
+composio_jwt_secret: "your_jwt_secret"
+
+# OneDrive rclone config (full rclone config file content)
+onedrive_rclone_config: |
+  [onedrive]
+  type = onedrive
+  token = {"access_token":"...","token_type":"Bearer","refresh_token":"...","expiry":"..."}
+  drive_id = ...
+  drive_type = personal
+
+# Cloudflared tunnel credentials JSON (from: cloudflared tunnel create rocknas)
+# Paste the full JSON content from ~/.cloudflared/<uuid>.json
+cloudflared_tunnel_credentials: |
+  {"AccountTag":"...","TunnelID":"...","TunnelSecret":"..."}
