Add OpenClaw module docs and builder improvements
Add module-specific hosts/system/openclaw/AGENTS.md and update the
openclaw builder to install runtime deps, pin uv, add the Docker CLI,
create a docker group entry, fix permissions, and run as UID 1000. Also
adjust workspace AGENTS.md, rename a model id in opencl

--- a/secrets/secrets.yaml.example
+++ b/secrets/secrets.yaml.example
@@ -26,7 +26,10 @@ anthropic_api_key: "sk-ant-..."
 brave_search_api_key: "BSA..."
 
 # Telegram bot token (for OpenClaw channels)
-telegram_bot_token: "123456:ABC..."
+telegram_bot_token: '123456:ABC...'
+
+# Telegram admin user ID (for OpenClaw elevated tool access)
+telegram_admin_id: '123456789'
 
 # Composio self-hosted secrets
 composio_encryption_key: "your_encryption_key"
